[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Goomba.gd" type="Script" id=1]
[ext_resource path="res://Enemies/gfxGoomba/walk1.png" type="Texture" id=2]
[ext_resource path="res://Enemies/gfxGoomba/walk0.png" type="Texture" id=3]
[ext_resource path="res://Enemies/gfxGoomba/squished.png" type="Texture" id=4]
[ext_resource path="res://Enemies/EnemyVisibilityNotifier.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squished",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]

[node name="Goomba" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 69
script = ExtResource( 1 )

[node name="KinematicCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.6, 0.7 )
shape = SubResource( 1 )

[node name="GoombaSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="enemie_hitbox" type="Area2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.8, 0.6 )
collision_layer = 8
collision_mask = 10

[node name="hitbox_collision" type="CollisionShape2D" parent="enemie_hitbox"]
shape = SubResource( 3 )

[node name="SquishedTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5

[node name="EnemyVisibilityNotifier" parent="." instance=ExtResource( 5 )]
position = Vector2( 0.338189, 1.4204 )
scale = Vector2( 0.398022, 0.357439 )
rect = Rect2( -25, -25, 50, 50 )
[connection signal="area_entered" from="enemie_hitbox" to="." method="_on_enemie_hitbox_area_entered"]
[connection signal="timeout" from="SquishedTimer" to="." method="_on_SquishedTimer_timeout"]
